--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,24 @@ jobs:
       - run:
           name: test
           command: pytest
+  build-docs:
+    docker:
+      - image: python:3.7
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.txt
+      - run:
+          name: Build docs
+          command: cd docs/ && make html
+      - persist_to_workspace:
+          root: docs/_build
+          paths:
+            - html
 workflows:
   version: 2
   build:
     jobs:
       - test
+      - docs-build
